--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. 
 	<a href="https://kissanimes.tv/"target="_blank">Various versions have evolved over the years</a>, sometimes by accident, sometimes on purpose (injected humour and the like).
 	</p>
-	<img src="file:///C:/Users/pikachufan25/Pictures/1%20PC-WALLPAPERS/2499.jpg" border="10">
+	<img src="2499.jpg" border="10">
 	<ul>
 		<li>Whatever
 			<ul>
